# ERPO

./: .gitignore  Readme.md  test.txt
autobuild/: build.sh
backend/login/: .gitignore  Cargo.toml  Readme.md
backend/login/src/: main.rs
backend/prepa/: .gitignore  HELP.md  interfaces  pom.xml
prepa/: .gitignore  babel.config.js  package-lock.json  package.json  vue.config.js
prepa/public/: index.html
prepa/src/: main.js
prepa/src/assets/scss/: main.scss
prepa/src/components/: DialogFullScreen.vue  Loading.vue  MyAutocomplete.vue  MyCombo.vue  MySelect.vue  MySnackbar.vue  MyTable.vue  MyTabs.vue  MyTextField.vue  MyTextarea.vue  searchArticle.vue
prepa/src/components/admin/: AjoutGroupe.vue  MyTabs.vue
prepa/src/components/adv/: MyAutoComplete.vue  MyTableAdv.vue  MyTabsAdv.vue
prepa/src/components/capa/: MyTabsCapa.vue  ajoutaction.vue  ajoutanimalie.vue  ajoutcause.vue  alert.vue  alert2.vue  analyse.vue  appliqueaction.vue  chargement.vue  classer.vue  detail.vue  detail2.vue  suppr.vue  tableau1.vue  validecause.vue  (+1 more)
prepa/src/composables/: useArticleSelection.js  useCheckSessionID.js  useDroit.js  useValidationTransfert.js
prepa/src/plugins/: vuetify.js
prepa/src/router/: admin.js  adv.js  appelentrant.js  appelsortant.js  capa.js  etatcommande.js  facture.js  facturio.js  home.js  index.js  preparation.js  suivianomalie.js  transfert.js
prepa/src/utils/: axiosConfig.js  cryptoUtils.js  useSessionTimeout.js  version.js
prepa/src/views/: AccueilPage.vue  LoginPage.vue
sql/: 010-KHistory.sql  020-xpQuote.sql  030-droit_tables.sql
(+266 files in other folders)
