[package]
name = "login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
r2d2 = "0.8.10"
r2d2_freetds = { path = "../../../r2d2-freetds" }
sexy = { path = "../../../sexy" }
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1.25", features = [ "macros", "rt-multi-thread" ] }
anyhow = "1.0.69"
hyper = { version = "0.14.24", features = ["full"] }
tower = "0.4.13"
rand = "0.8.5"
log = "0.4.17"
serde_json = "1"
clap = { version = "4.1.6", features = [ "cargo", "string" ] }


